@@ -18,6 +18,7 @@ REST API
 
 * New URI: "/studies/.../merge" to merge a study
 * New URI: "/studies/.../split" to split a study
+* POST-ing a DICOM file to "/instances" also answers the patient/study/series ID
 
 Maintenance
 -----------
